# SecondBrain

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
secondbrain/: __init__.py  main.py  qa_test_suite.py
secondbrain/agent/: agent.py  prompts.py  service.py  tools.py
secondbrain/agents/: README.md  chat_agent.py  generation_agent.py  retrieval_agent.py
secondbrain/api/: chat.py  jobs.py  upload.py
secondbrain/cli/: chat.py
secondbrain/core/: exceptions.py  logger.py
secondbrain/docs/: future_improvements.md  testing_guide.md  testing_report.md
secondbrain/graph/: agent_node.py  checkpointer.py  export_graph.py  nodes.py  state.py  tool_node.py  workflow.py
secondbrain/mcp_server/: prompts.py  registry.py  resources.py  server.py
secondbrain/mcp_server/tools/: ask.py  memory.py  search.py  upload.py
secondbrain/memory/: long_term.py  memory_manager.py  prompts.py  short_term.py
secondbrain/models/: requests.py  responses.py
secondbrain/queues/: client.py  jobs.py  worker.py
secondbrain/rag/: pipeline.py
secondbrain/rag/embeddings/: gemini_embeddings.py
secondbrain/rag/llm/: gemini_llm.py
secondbrain/rag/loaders/: docker-compose.yml  pdf_loader.py  retriever.py
secondbrain/rag/processors/: chunker.py
secondbrain/rag/retriever/: retriever.py
secondbrain/rag/services/: chat_service.py  (+5 more)
secondbrain/tools/: __init__.py  documents.py  questions.py  search.py  summarize.py
secondbrain/utils/: exceptions.py  logger.py
tests/: smoke_test.py
(+1 files in other folders)
