[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "secondbrain"
version = "0.1.0"
description = "SecondBrain AI - Personal Knowledge Assistant"
authors = [
    {name = "SecondBrain Team"}
]
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["secondbrain*"]
